# ntd_challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  makefile  manage.py  pyproject.toml  start.sh
.devcontainer/: devcontainer.json
books/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py
ntd_challenge/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
planets/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
planets/management/commands/: fill_planets.py
planets/migrations/: 0001_initial.py  0002_auto_20251201_0405.py
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py
